# kriging-interpolation

./: .env  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  ruff.toml
src/: main.py
src/api/: health.py  router.py  schemas.py
src/api/v0/: router.py
src/api/v0/kriging/: geospatial.py  router.py  schemas.py
src/api/v0/points/: coordinate.py  router.py
src/celery_app/: __init__.py  base.py
src/config/: __init__.py  config.py
src/db/mongo/: base.py  collections.py
src/entity/: base.py  kriging.py  point.py
src/repository/: exceptions.py
src/repository/coordinate/: __init__.py  base.py  coordinate.py
src/repository/kriging/: base.py  geospatial.py
src/service/: exceptions.py
src/service/kriging/: exceptions.py  geospatial.py
src/service/points/: coordinate.py
