[tool.poetry]
name = "kriging-interpolation"
version = "0.2.1"
description = "Api for working with interpolation kriging methods"
authors = ["Askar akhmadullin <akhmadullin.a@internet.ru>"]
readme = "README.md"
packages = [{include = "kriging_interpolation"}]

[tool.poetry.dependencies]
python = "3.12.1"
fastapi = "^0.105.0"
uvicorn = "^0.24.0.post1"
pydantic-settings = "^2.1.0"
pydantic-extra-types = "^2.2.0"
gstools = "^1.5.1"
motor = "^3.3.2"
celery = {extras = ["redis"], version = "^5.3.6"}
gunicorn = "^21.2.0"


[tool.poetry.group.dev.dependencies]
matplotlib = "^3.8.2"
notebook = "^7.0.6"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
